--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/gestion_coordinadores.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/gestion_coordinadores.html
@@ -36,26 +36,29 @@
 <div class="layout-wrapper layout-content-navbar">
   <div class="layout-container">
     <!-- Menu -->
+
     <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-      <div class="app-brand demo">
+      <!-- Contenedor para la imagen centrada -->
+      <div style="text-align: center;">
+        <img src="logo.png" alt="Imagen" style="width: 150px; margin-bottom: -45px;">
+      </div>
+
+      <div class="app-brand demo" style="text-align: center;">
         <a href="inicio_superadmin.html" class="app-brand-link">
-              <span class="app-brand-logo demo">
-                <svg width="25" viewBox="0 0 25 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <!-- Aquí va el contenido del logo SVG -->
-                </svg>
-              </span>
-          <span class="app-brand-text demo menu-text fw-bolder ms-2">Sneat</span>
+          <span class="app-brand-text demo menu-text fw-bolder" style="font-family: 'Poppins', sans-serif; color: #7367F0; padding-left: 15px;">TelExpress</span>
         </a>
+
         <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
           <i class="bx bx-chevron-left bx-sm align-middle"></i>
         </a>
       </div>
 
+
       <div class="menu-inner-shadow"></div>
 
       <ul class="menu-inner py-1">
         <!-- Dashboard -->
-        <li class="menu-item ">
+        <li class="menu-item">
           <a href="inicio_superadmin.html" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Inicio">Inicio</div>
@@ -64,16 +67,18 @@
 
         <li class="menu-item">
           <a href="dashboard_superadmin.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-collection"></i>
+            <i class="menu-icon tf-icons bx bx-grid-alt"></i>
             <div data-i18n="Dashboard">Dashboard</div>
           </a>
         </li>
         <li class="menu-item">
           <a href="inventario_superadmin.html" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-collection"></i>
+            <i class="menu-icon tf-icons bx bx-package"></i>
             <div data-i18n="Inventario">Inventario</div>
           </a>
         </li>
+
+
 
         <li class="menu-header small text-uppercase">
           <span class="menu-header-text">Páginas</span>
@@ -102,14 +107,12 @@
           </ul>
         </li>
 
-        <li class="menu-item ruedita">
-          <a href="ajustes_superadmin.html" target="_blank" class="menu-link">
-            <i class="menu-icon tf-icons bx bx-cog"></i>
-            <div data-i18n="Ajustes ">Ajustes</div>
-          </a>
-        </li>
+
+
+
       </ul>
     </aside>
+    <!-- / Menu -->
 
     <!-- Layout container -->
     <div class="layout-page">
