--- a/HTML Modelo/sneat-1.0.0/html/Sistema/cambio_contraseña.html
+++ b/HTML Modelo/sneat-1.0.0/html/Sistema/cambio_contraseña.html
@@ -149,8 +149,10 @@
               </div>
             </div>
             <div class="mb-3">
-              <button class="btn btn-primary d-grid w-100" type="submit">Cambiar Contraseña</button>
+              <button type="button" class="btn btn-primary d-grid w-100" data-bs-toggle="modal" data-bs-target="#confirmModal">Cambiar Contraseña</button>
             </div>
+
+
             <div class="mb-3">
               <a class="btn btn-primary d-grid w-100" href="../SuperAdmin/inicio_superadmin.html">Regresar a Inicio</a>
             </div>
@@ -163,6 +165,60 @@
     </div>
   </div>
 </div>
+
+<!-- Modal de Confirmación -->
+<div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmModalLabel">Confirmar Cambio de Contraseña</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ¿Estás seguro de que deseas cambiar la contraseña?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" id="confirmarCambio">Confirmar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal de Éxito -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="successModalLabel">Contraseña Cambiada Exitosamente</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Tu contraseña ha sido cambiada exitosamente.
+      </div>
+      <div class="modal-footer">
+        <a href="../SuperAdmin/inicio_superadmin.html" class="btn btn-primary">Regresar a Inicio</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS and dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+
+<!-- Script para manejar la confirmación -->
+<script>
+  document.getElementById('confirmarCambio').addEventListener('click', function () {
+    // Simular el envío del formulario
+    $('#confirmModal').modal('hide'); // Oculta el modal de confirmación
+    setTimeout(function() {
+      $('#successModal').modal('show'); // Muestra el modal de éxito
+    }, 500); // Simulación de un pequeño retraso
+  });
+</script>
+
+
 
 <!-- / Content -->
 
