--- a/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inicio_superadmin.html
+++ b/HTML Modelo/sneat-1.0.0/html/SuperAdmin/inicio_superadmin.html
@@ -652,6 +652,182 @@
             </div>
             <!--/ Tabla 2 -->
 
+            <!-- Tabla 3 -->
+            <div class="col-12 col-lg-12 order-2 order-md-3 order-lg-2 mb-4">
+              <!-- Bootstrap Table with Header - Light -->
+              <div class="card">
+                <h5 class="card-header">Coordinadores Zonales</h5>
+                <div class="table-responsive text-nowrap">
+                  <table class="table">
+                    <thead class="table-light">
+                    <tr>
+                      <th><i class="fab fa-angular fa-lg text-danger me-3"></i>Nombre</th>
+                      <th>Apellido</th>
+                      <th>Teléfono</th>
+                      <th>DNI</th>
+                      <th>Correo</th>
+                      <th>Zona</th>
+                      <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-border-bottom-0">
+                    <tr>
+                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i>Albert</td>
+                      <td>Cook</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>Angular Project</td>
+                      <td>
+                        <div class="dropdown">
+                          <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu">
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-edit-alt me-1"></i> Editar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-trash me-1"></i> Eliminar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-log-in-circle me-1"></i> Ingresar</a
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><i class="fab fa-react fa-lg text-info me-3"></i>Barry</td>
+                      <td>Hunter</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>React Project</td>
+                      <td>
+                        <div class="dropdown">
+                          <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu">
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-edit-alt me-1"></i> Editar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-trash me-1"></i> Eliminar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-log-in-circle me-1"></i> Ingresar</a
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><i class="fab fa-vuejs fa-lg text-success me-3"></i>Trevor</td>
+                      <td>Baker</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>VueJs Project</td>
+                      <td>
+                        <div class="dropdown">
+                          <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu">
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-edit-alt me-1"></i> Editar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-trash me-1"></i> Eliminar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-log-in-circle me-1"></i> Ingresar</a
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><i class="fab fa-bootstrap fa-lg text-primary me-3"></i>Jerry</td>
+                      <td>Milton</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>Bootstrap Project</td>
+                      <td>
+                        <div class="dropdown">
+                          <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu">
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-edit-alt me-1"></i> Editar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-trash me-1"></i> Eliminar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-log-in-circle me-1"></i> Ingresar</a
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><i class="fab fa-angular fa-lg text-danger me-3"></i>Albert</td>
+                      <td>Cook</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>01234567</td>
+                      <td>Angular Project</td>
+                      <td>
+                        <div class="dropdown">
+                          <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                            <i class="bx bx-dots-vertical-rounded"></i>
+                          </button>
+                          <div class="dropdown-menu">
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-edit-alt me-1"></i> Editar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-trash me-1"></i> Eliminar</a
+                            >
+                            <a class="dropdown-item" href="javascript:void(0);"
+                            ><i class="bx bx-log-in-circle me-1"></i> Ingresar</a
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+              <br>
+              <div>
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination justify-content-end">
+                    <li class="page-item">
+                      <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                      </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                      <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>              <!-- Bootstrap Table with Header - Light -->
+            </div>
+            <!--/ Tabla 3 -->
+
           </div>
 
         </div>
