--- a/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
+++ b/HTML Modelo/sneat-1.0.0/html/CoordinadorZonal/inicio_coordinador_zonal.html
@@ -79,7 +79,7 @@
         <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
             <!-- Contenedor para la imagen centrada -->
             <div style="text-align: center;">
-                <img src="logo.png" alt="Imagen" style="width: 150px; margin-bottom: -70px;">
+                <img src="logo.png" alt="Imagen" style="width: 150px; margin-bottom: -70px; margin-top: -20px">
             </div>
 
             <div class="app-brand demo" style="text-align: center;">
@@ -293,13 +293,13 @@
                             <h4 class="app-brand-text demo menu-text fw-bolder" style="font-family: Poppins; color: #7367F0; text-align: center;">¡Bienvenido coordinador zonal!</h4>
 
                             <!-- Añadimos margen superior al segundo h4 -->
-                            <h4 class="mb-2" style="font-family: Zilla Slab; margin-top: 30px; margin-bottom:40px">En esta sección, podrás ver algunas funciones que puedes realizar como coordinador zonal. </h4>
+                            <h4 class="mb-2" style="margin-top: 50px; margin-bottom:10px; font-size: 20px;">En esta sección, podrás ver algunas funciones que puedes realizar como coordinador zonal.</h4>
 
                             <!-- Contenedor flexbox para alinear el texto y la imagen -->
                             <div style="display: flex; justify-content: space-between; align-items: center;">
                                 <!-- Banner con el texto de funciones a la izquierda -->
                                 <div style="background-color: #6DC8C2; padding: 20px; border-radius: 10px; width: 60%;">
-                                    <p style="font-family: Zilla Slab; font-size: 20px; color: white;">
+                                    <p style="font-size:20px; color: white;">
                                         Funciones:
                                         <br>1. Crear agentes de compra
                                         <br>2. Crear y actualizar fechas de descarga de las importaciones
