--- a/HTML Modelo/sneat-1.0.0/html/Sistema/Login.html
+++ b/HTML Modelo/sneat-1.0.0/html/Sistema/Login.html
@@ -87,7 +87,7 @@
           <div class="card">
             <div class="card-body">
               <!-- Logo -->
-              <img src="logo.png" alt="Logo" style="width: 250px; display: block; margin: -80px auto -20px auto;" />
+              <img src="logo.png" alt="Logo" style="width: 250px; display: block; margin: -70px auto -90px auto;" />
               <div class="app-brand justify-content-center">
                 <!--imagen de logo-->
                 <a href="index.html" class="app-brand-link gap-2">
@@ -137,7 +137,7 @@
               </form>
 
               <p class="text-center">
-                <span>Nuevo en nuestra plataforma?</span>
+                <span>¿Nuevo en nuestra plataforma?</span>
                 <a href="auth-register-basic.html">
                   <span>Crea tu cuenta</span>
                 </a>
