--- a/HTML Modelo/sneat-1.0.0/html/Agente/usuarios_agente.html
+++ b/HTML Modelo/sneat-1.0.0/html/Agente/usuarios_agente.html
@@ -145,7 +145,7 @@
         </li>
 
         <li class="menu-item">
-            <a href="inventario_superadmin.html" class="menu-link">
+            <a href="usuarios_baneados.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-block"></i>
               <div data-i18n="UsuariosBaneados">Usuarios baneados</div>
             </a>
